Baseline models and update

--- a/datapreprocessing.ipynb
+++ b/datapreprocessing.ipynb
@@ -1921,17 +1921,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "09de2a2d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export price data\n",
-    "X_close.drop(['Day_of_week'], axis=1).to_pickle(\"data/stocks_price.pkl\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "39ea116e",
    "metadata": {},
@@ -5288,6 +5277,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "f6c77a8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exc_returns.to_pickle(\"data/exc_returns.pkl\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "93018afb",
    "metadata": {},
@@ -6174,6 +6173,414 @@
     "# Save data\n",
     "tukey_estimates.dropna().to_pickle(\"data/tukey_estimates.pkl\")\n",
     "huber_estimates.dropna().to_pickle(\"data/huber_estimates.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "cc102c11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SX5E_returns.to_pickle(\"data/index_returns.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "fb7fd8cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VOW3 GY Equity</th>\n",
+       "      <th>ENGI FP Equity</th>\n",
+       "      <th>BAYN GY Equity</th>\n",
+       "      <th>BNP FP Equity</th>\n",
+       "      <th>PHIA NA Equity</th>\n",
+       "      <th>ISP IM Equity</th>\n",
+       "      <th>SAN FP Equity</th>\n",
+       "      <th>MC FP Equity</th>\n",
+       "      <th>ENEL IM Equity</th>\n",
+       "      <th>CS FP Equity</th>\n",
+       "      <th>...</th>\n",
+       "      <th>GLE FP Equity</th>\n",
+       "      <th>ITX SQ Equity</th>\n",
+       "      <th>OR FP Equity</th>\n",
+       "      <th>BBVA SQ Equity</th>\n",
+       "      <th>ASML NA Equity</th>\n",
+       "      <th>SAP GY Equity</th>\n",
+       "      <th>INGA NA Equity</th>\n",
+       "      <th>ENI IM Equity</th>\n",
+       "      <th>ABI BB Equity</th>\n",
+       "      <th>DTE GY Equity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2014-01-03</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.001793</td>\n",
+       "      <td>0.007468</td>\n",
+       "      <td>0.002518</td>\n",
+       "      <td>0.004657</td>\n",
+       "      <td>0.014477</td>\n",
+       "      <td>0.013731</td>\n",
+       "      <td>-0.001907</td>\n",
+       "      <td>0.013942</td>\n",
+       "      <td>0.003797</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.004708</td>\n",
+       "      <td>0.002526</td>\n",
+       "      <td>0.007535</td>\n",
+       "      <td>-0.003204</td>\n",
+       "      <td>-0.000148</td>\n",
+       "      <td>0.000648</td>\n",
+       "      <td>0.000496</td>\n",
+       "      <td>0.009195</td>\n",
+       "      <td>0.011179</td>\n",
+       "      <td>0.011476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-06</th>\n",
+       "      <td>-0.008766</td>\n",
+       "      <td>-0.012016</td>\n",
+       "      <td>-0.004474</td>\n",
+       "      <td>0.001615</td>\n",
+       "      <td>0.007775</td>\n",
+       "      <td>0.010448</td>\n",
+       "      <td>0.001310</td>\n",
+       "      <td>-0.018879</td>\n",
+       "      <td>0.002514</td>\n",
+       "      <td>-0.002023</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.009273</td>\n",
+       "      <td>-0.005059</td>\n",
+       "      <td>-0.009129</td>\n",
+       "      <td>0.010603</td>\n",
+       "      <td>-0.025412</td>\n",
+       "      <td>0.004688</td>\n",
+       "      <td>-0.010366</td>\n",
+       "      <td>0.005705</td>\n",
+       "      <td>-0.018080</td>\n",
+       "      <td>-0.006541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-07</th>\n",
+       "      <td>0.006270</td>\n",
+       "      <td>0.012314</td>\n",
+       "      <td>0.010409</td>\n",
+       "      <td>0.028285</td>\n",
+       "      <td>0.007898</td>\n",
+       "      <td>0.032296</td>\n",
+       "      <td>-0.001179</td>\n",
+       "      <td>-0.007026</td>\n",
+       "      <td>0.012477</td>\n",
+       "      <td>0.025001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.039488</td>\n",
+       "      <td>0.009674</td>\n",
+       "      <td>0.005567</td>\n",
+       "      <td>0.055475</td>\n",
+       "      <td>-0.008057</td>\n",
+       "      <td>-0.007935</td>\n",
+       "      <td>0.034853</td>\n",
+       "      <td>0.004540</td>\n",
+       "      <td>0.019910</td>\n",
+       "      <td>0.004910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-08</th>\n",
+       "      <td>0.000750</td>\n",
+       "      <td>0.005952</td>\n",
+       "      <td>-0.012903</td>\n",
+       "      <td>0.014192</td>\n",
+       "      <td>0.001828</td>\n",
+       "      <td>0.021484</td>\n",
+       "      <td>-0.012401</td>\n",
+       "      <td>-0.014599</td>\n",
+       "      <td>0.004947</td>\n",
+       "      <td>0.006890</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.029297</td>\n",
+       "      <td>-0.006720</td>\n",
+       "      <td>-0.018812</td>\n",
+       "      <td>0.006949</td>\n",
+       "      <td>0.002743</td>\n",
+       "      <td>0.016766</td>\n",
+       "      <td>0.021064</td>\n",
+       "      <td>-0.016558</td>\n",
+       "      <td>0.004819</td>\n",
+       "      <td>-0.002043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-09</th>\n",
+       "      <td>-0.003503</td>\n",
+       "      <td>-0.007745</td>\n",
+       "      <td>-0.012870</td>\n",
+       "      <td>-0.016810</td>\n",
+       "      <td>-0.005126</td>\n",
+       "      <td>0.007746</td>\n",
+       "      <td>-0.011885</td>\n",
+       "      <td>-0.022916</td>\n",
+       "      <td>-0.006809</td>\n",
+       "      <td>-0.010353</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.002465</td>\n",
+       "      <td>-0.002532</td>\n",
+       "      <td>-0.013014</td>\n",
+       "      <td>-0.009635</td>\n",
+       "      <td>0.010297</td>\n",
+       "      <td>-0.012872</td>\n",
+       "      <td>-0.003797</td>\n",
+       "      <td>-0.005774</td>\n",
+       "      <td>0.002984</td>\n",
+       "      <td>0.002043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-21</th>\n",
+       "      <td>-0.004178</td>\n",
+       "      <td>0.003604</td>\n",
+       "      <td>0.006373</td>\n",
+       "      <td>0.002535</td>\n",
+       "      <td>-0.002109</td>\n",
+       "      <td>-0.017008</td>\n",
+       "      <td>-0.006191</td>\n",
+       "      <td>0.013306</td>\n",
+       "      <td>0.007354</td>\n",
+       "      <td>0.005762</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.005712</td>\n",
+       "      <td>0.003964</td>\n",
+       "      <td>-0.004474</td>\n",
+       "      <td>-0.007657</td>\n",
+       "      <td>-0.013445</td>\n",
+       "      <td>-0.015501</td>\n",
+       "      <td>0.014114</td>\n",
+       "      <td>-0.003768</td>\n",
+       "      <td>-0.001509</td>\n",
+       "      <td>-0.007632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-24</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.018556</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.018138</td>\n",
+       "      <td>-0.013570</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.019211</td>\n",
+       "      <td>-0.033296</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.001491</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.017236</td>\n",
+       "      <td>-0.022223</td>\n",
+       "      <td>-0.015313</td>\n",
+       "      <td>-0.013186</td>\n",
+       "      <td>-0.015918</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.018183</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.018977</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-27</th>\n",
+       "      <td>-0.041753</td>\n",
+       "      <td>-0.021400</td>\n",
+       "      <td>-0.037001</td>\n",
+       "      <td>-0.006336</td>\n",
+       "      <td>-0.002307</td>\n",
+       "      <td>-0.001675</td>\n",
+       "      <td>-0.006486</td>\n",
+       "      <td>0.008125</td>\n",
+       "      <td>-0.026971</td>\n",
+       "      <td>-0.012223</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.014410</td>\n",
+       "      <td>-0.002700</td>\n",
+       "      <td>-0.010426</td>\n",
+       "      <td>-0.002856</td>\n",
+       "      <td>0.013207</td>\n",
+       "      <td>-0.007317</td>\n",
+       "      <td>-0.013831</td>\n",
+       "      <td>-0.018613</td>\n",
+       "      <td>-0.019170</td>\n",
+       "      <td>-0.028380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-28</th>\n",
+       "      <td>0.010711</td>\n",
+       "      <td>0.020993</td>\n",
+       "      <td>0.023389</td>\n",
+       "      <td>0.021305</td>\n",
+       "      <td>0.012787</td>\n",
+       "      <td>0.016005</td>\n",
+       "      <td>0.019601</td>\n",
+       "      <td>0.022405</td>\n",
+       "      <td>-0.000793</td>\n",
+       "      <td>0.012862</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.021088</td>\n",
+       "      <td>0.008973</td>\n",
+       "      <td>0.012700</td>\n",
+       "      <td>0.020902</td>\n",
+       "      <td>0.029715</td>\n",
+       "      <td>0.013201</td>\n",
+       "      <td>0.018007</td>\n",
+       "      <td>0.016723</td>\n",
+       "      <td>0.002612</td>\n",
+       "      <td>0.015641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.020162</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.002536</td>\n",
+       "      <td>0.007627</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.005832</td>\n",
+       "      <td>0.021334</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.004145</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000899</td>\n",
+       "      <td>-0.001788</td>\n",
+       "      <td>0.015527</td>\n",
+       "      <td>-0.001186</td>\n",
+       "      <td>0.003945</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.005541</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.003472</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1271 rows × 40 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            VOW3 GY Equity  ENGI FP Equity  BAYN GY Equity  BNP FP Equity  \\\n",
+       "2014-01-03        0.000000        0.001793        0.007468       0.002518   \n",
+       "2014-01-06       -0.008766       -0.012016       -0.004474       0.001615   \n",
+       "2014-01-07        0.006270        0.012314        0.010409       0.028285   \n",
+       "2014-01-08        0.000750        0.005952       -0.012903       0.014192   \n",
+       "2014-01-09       -0.003503       -0.007745       -0.012870      -0.016810   \n",
+       "...                    ...             ...             ...            ...   \n",
+       "2018-12-21       -0.004178        0.003604        0.006373       0.002535   \n",
+       "2018-12-24        0.000000       -0.018556        0.000000      -0.018138   \n",
+       "2018-12-27       -0.041753       -0.021400       -0.037001      -0.006336   \n",
+       "2018-12-28        0.010711        0.020993        0.023389       0.021305   \n",
+       "2018-12-31        0.000000        0.020162        0.000000       0.002536   \n",
+       "\n",
+       "            PHIA NA Equity  ISP IM Equity  SAN FP Equity  MC FP Equity  \\\n",
+       "2014-01-03        0.004657       0.014477       0.013731     -0.001907   \n",
+       "2014-01-06        0.007775       0.010448       0.001310     -0.018879   \n",
+       "2014-01-07        0.007898       0.032296      -0.001179     -0.007026   \n",
+       "2014-01-08        0.001828       0.021484      -0.012401     -0.014599   \n",
+       "2014-01-09       -0.005126       0.007746      -0.011885     -0.022916   \n",
+       "...                    ...            ...            ...           ...   \n",
+       "2018-12-21       -0.002109      -0.017008      -0.006191      0.013306   \n",
+       "2018-12-24       -0.013570       0.000000      -0.019211     -0.033296   \n",
+       "2018-12-27       -0.002307      -0.001675      -0.006486      0.008125   \n",
+       "2018-12-28        0.012787       0.016005       0.019601      0.022405   \n",
+       "2018-12-31        0.007627       0.000000       0.005832      0.021334   \n",
+       "\n",
+       "            ENEL IM Equity  CS FP Equity  ...  GLE FP Equity  ITX SQ Equity  \\\n",
+       "2014-01-03        0.013942      0.003797  ...      -0.004708       0.002526   \n",
+       "2014-01-06        0.002514     -0.002023  ...       0.009273      -0.005059   \n",
+       "2014-01-07        0.012477      0.025001  ...       0.039488       0.009674   \n",
+       "2014-01-08        0.004947      0.006890  ...       0.029297      -0.006720   \n",
+       "2014-01-09       -0.006809     -0.010353  ...      -0.002465      -0.002532   \n",
+       "...                    ...           ...  ...            ...            ...   \n",
+       "2018-12-21        0.007354      0.005762  ...       0.005712       0.003964   \n",
+       "2018-12-24        0.000000     -0.001491  ...      -0.017236      -0.022223   \n",
+       "2018-12-27       -0.026971     -0.012223  ...      -0.014410      -0.002700   \n",
+       "2018-12-28       -0.000793      0.012862  ...       0.021088       0.008973   \n",
+       "2018-12-31        0.000000      0.004145  ...       0.000899      -0.001788   \n",
+       "\n",
+       "            OR FP Equity  BBVA SQ Equity  ASML NA Equity  SAP GY Equity  \\\n",
+       "2014-01-03      0.007535       -0.003204       -0.000148       0.000648   \n",
+       "2014-01-06     -0.009129        0.010603       -0.025412       0.004688   \n",
+       "2014-01-07      0.005567        0.055475       -0.008057      -0.007935   \n",
+       "2014-01-08     -0.018812        0.006949        0.002743       0.016766   \n",
+       "2014-01-09     -0.013014       -0.009635        0.010297      -0.012872   \n",
+       "...                  ...             ...             ...            ...   \n",
+       "2018-12-21     -0.004474       -0.007657       -0.013445      -0.015501   \n",
+       "2018-12-24     -0.015313       -0.013186       -0.015918       0.000000   \n",
+       "2018-12-27     -0.010426       -0.002856        0.013207      -0.007317   \n",
+       "2018-12-28      0.012700        0.020902        0.029715       0.013201   \n",
+       "2018-12-31      0.015527       -0.001186        0.003945       0.000000   \n",
+       "\n",
+       "            INGA NA Equity  ENI IM Equity  ABI BB Equity  DTE GY Equity  \n",
+       "2014-01-03        0.000496       0.009195       0.011179       0.011476  \n",
+       "2014-01-06       -0.010366       0.005705      -0.018080      -0.006541  \n",
+       "2014-01-07        0.034853       0.004540       0.019910       0.004910  \n",
+       "2014-01-08        0.021064      -0.016558       0.004819      -0.002043  \n",
+       "2014-01-09       -0.003797      -0.005774       0.002984       0.002043  \n",
+       "...                    ...            ...            ...            ...  \n",
+       "2018-12-21        0.014114      -0.003768      -0.001509      -0.007632  \n",
+       "2018-12-24       -0.018183       0.000000      -0.018977       0.000000  \n",
+       "2018-12-27       -0.013831      -0.018613      -0.019170      -0.028380  \n",
+       "2018-12-28        0.018007       0.016723       0.002612       0.015641  \n",
+       "2018-12-31        0.005541       0.000000       0.003472       0.000000  \n",
+       "\n",
+       "[1271 rows x 40 columns]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returns.to_pickle(\"data/stocks_returns.pkl\")"
    ]
   }
  ],
