--- a/models.ipynb
+++ b/models.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 141,
    "metadata": {},
@@ -14,6 +21,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 177,
    "metadata": {},
@@ -21,57 +35,27 @@
    "source": [
     "stocks_returns = pd.read_pickle('data/stocks_returns.pkl')\n",
     "exc_returns = pd.read_pickle('data/exc_returns.pkl')\n",
-    "prices_tukey = pd.read_pickle('data/tukey_estimates.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2014-01-03    0.004965\n",
-       "2014-01-06   -0.002351\n",
-       "2014-01-07    0.011539\n",
-       "2014-01-08    0.001303\n",
-       "2014-01-09   -0.004476\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "index_returns = pd.read_pickle(\"data/index_returns.pkl\")\n",
-    "index_returns.head()"
+    "prices_tukey = pd.read_pickle('data/tukey_estimates.pkl')\n",
+    "index_returns = pd.read_pickle(\"data/index_returns.pkl\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Baseline MODELS\n",
-    "\n",
-    "## ARIMA"
+    "## Baseline MODELS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ARIMA"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#split data into train and training set\n",
-    "train_price, test_price = prices_tukey.loc[:'2018-12-01'], prices_tukey.loc['2018-12-01':]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5506,26 +5490,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['VOW3 GY Equity', 'ENGI FP Equity', 'BAYN GY Equity', 'BNP FP Equity', 'PHIA NA Equity', 'ISP IM Equity', 'SAN FP Equity', 'MC FP Equity', 'ENEL IM Equity', 'CS FP Equity', 'VIV FP Equity', 'SU FP Equity', 'MUV2 GY Equity', 'DPW GY Equity', 'AIR FP Equity', 'EL FP Equity', 'BAS GY Equity', 'ORA FP Equity', 'TEF SQ Equity', 'null', 'SIE GY Equity', 'AI FP Equity', 'null.1', 'BN FP Equity', 'SAN SQ Equity', 'DG FP Equity', 'BMW GY Equity', 'null.2', 'ALV GY Equity', 'IBE SQ Equity', 'GLE FP Equity', 'ITX SQ Equity', 'OR FP Equity', 'BBVA SQ Equity', 'ASML NA Equity', 'SAP GY Equity', 'INGA NA Equity', 'ENI IM Equity', 'ABI BB Equity', 'DTE GY Equity'])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
@@ -6164,7 +6128,14 @@
     }
    ],
    "source": [
-    "preds"
+    "display(preds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Workflow"
    ]
   },
   {
@@ -6828,26 +6799,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.series.Series"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(pred_performance_ARIMA)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [
@@ -7357,7 +7308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test new functions"
+    "#### Functions"
    ]
   },
   {
@@ -7475,6 +7426,13 @@
    ],
    "source": [
     "plot_portfolios(portfolio_series_ARIMA, index_returns.loc[preds.index[0]:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Models"
    ]
   }
  ],
