--- a/Data_PreProcessing.ipynb
+++ b/Data_PreProcessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 128,
    "id": "abc4e2e2-d9dd-4b9d-bc78-e30adf2e688d",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 129,
    "id": "8a2419a8-1a60-40d5-b714-1ae094b1cb89",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 130,
    "id": "70d6f426-0d22-474d-aa59-766338a2483e",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 131,
    "id": "b7a7b30d-fcf9-4654-8687-a4db1d1a2b31",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 132,
    "id": "ae329301-ab05-4f47-af82-ebad240f4bbc",
    "metadata": {},
    "outputs": [
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 133,
    "id": "3bc06729-f3e5-4fd0-bf23-fc64c8bceeed",
    "metadata": {},
    "outputs": [],
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 134,
    "id": "51bf9798-ac9a-4690-ad91-72eb1dee81ca",
    "metadata": {},
    "outputs": [],
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 135,
    "id": "e6545281-3aca-4c90-b0a1-a53b1b71c7e7",
    "metadata": {},
    "outputs": [],
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 136,
    "id": "98ea6732-d3d0-40d5-901d-3b16857e2159",
    "metadata": {},
    "outputs": [],
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 137,
    "id": "469f1b41-19af-48d2-bc80-cbaa676723b5",
    "metadata": {},
    "outputs": [
@@ -825,7 +825,7 @@
        "1826.0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 138,
    "id": "45cd9e3e-7624-4e8b-b2a4-6496995342df",
    "metadata": {},
    "outputs": [],
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 139,
    "id": "1b19a8b7-e049-4cb0-971b-8d219b22722c",
    "metadata": {},
    "outputs": [
@@ -869,7 +869,7 @@
        "40"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 140,
    "id": "409e092b-2c1f-45e0-b928-d641004e2746",
    "metadata": {},
    "outputs": [],
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 141,
    "id": "f0c8a8fb-0427-45d0-a7b7-c01afc8b4cad",
    "metadata": {},
    "outputs": [
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 142,
    "id": "a5213dd2-c5bf-4b6a-8d84-bcbe85588372",
    "metadata": {},
    "outputs": [],
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 143,
    "id": "4f6939f5",
    "metadata": {},
    "outputs": [
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 144,
    "id": "75d58ba2",
    "metadata": {},
    "outputs": [],
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 145,
    "id": "9a6fe6f5",
    "metadata": {},
    "outputs": [
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 146,
    "id": "dddb3c3e",
    "metadata": {},
    "outputs": [],
@@ -1636,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 147,
    "id": "90c509f5",
    "metadata": {},
    "outputs": [
@@ -1663,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 148,
    "id": "cc5dd30a",
    "metadata": {},
    "outputs": [
@@ -2050,7 +2050,7 @@
        "[1272 rows x 40 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2062,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 149,
    "id": "5d935fc3",
    "metadata": {},
    "outputs": [],
@@ -2072,7 +2072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 150,
    "id": "a5004278",
    "metadata": {},
    "outputs": [],
@@ -2090,7 +2090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 151,
    "id": "7782d41f",
    "metadata": {},
    "outputs": [],
@@ -2102,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 152,
    "id": "020a1fc4",
    "metadata": {},
    "outputs": [],
@@ -2113,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 153,
    "id": "0ede3703",
    "metadata": {},
    "outputs": [],
@@ -2124,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 154,
    "id": "1c640dd3",
    "metadata": {},
    "outputs": [
@@ -2540,7 +2540,7 @@
        "[6494 rows x 90 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2552,7 +2552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 155,
    "id": "6680b204",
    "metadata": {},
    "outputs": [
@@ -2939,7 +2939,7 @@
        "[1272 rows x 90 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2959,7 +2959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 156,
    "id": "bd54bd78",
    "metadata": {},
    "outputs": [
@@ -3172,7 +3172,7 @@
        "[5 rows x 90 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3188,7 +3188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 157,
    "id": "50f02f40",
    "metadata": {},
    "outputs": [
@@ -3401,7 +3401,7 @@
        "[5 rows x 90 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3413,7 +3413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 158,
    "id": "7ad30a50",
    "metadata": {},
    "outputs": [
@@ -3626,7 +3626,7 @@
        "[5 rows x 90 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3640,7 +3640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 159,
    "id": "31ad0c47",
    "metadata": {},
    "outputs": [
@@ -3853,7 +3853,7 @@
        "[5 rows x 90 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3866,7 +3866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 160,
    "id": "0d4102e4",
    "metadata": {},
    "outputs": [
@@ -3876,7 +3876,7 @@
        "((1271, 90), (1271, 90))"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3889,7 +3889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 161,
    "id": "46fe1990",
    "metadata": {},
    "outputs": [
@@ -4276,7 +4276,7 @@
        "[1271 rows x 90 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4288,7 +4288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 162,
    "id": "eafd80ea",
    "metadata": {},
    "outputs": [
@@ -4309,7 +4309,7 @@
        "Length: 1271, dtype: float64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4323,17 +4323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 163,
    "id": "7e786981",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x179ba3e10>]"
+       "[<matplotlib.lines.Line2D at 0x17bf9df50>]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4359,7 +4359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 164,
    "id": "f84ae362",
    "metadata": {},
    "outputs": [],
@@ -4377,7 +4377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 165,
    "id": "4995da26",
    "metadata": {},
    "outputs": [
@@ -4764,7 +4764,7 @@
        "[1271 rows x 40 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4776,7 +4776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 166,
    "id": "65100651",
    "metadata": {},
    "outputs": [
@@ -4801,7 +4801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 167,
    "id": "f6c77a8f",
    "metadata": {},
    "outputs": [],
@@ -4832,7 +4832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 168,
    "id": "354ba2c7",
    "metadata": {},
    "outputs": [],
@@ -4847,7 +4847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 169,
    "id": "20137d9a",
    "metadata": {},
    "outputs": [
@@ -5244,7 +5244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 170,
    "id": "c26fe64a",
    "metadata": {},
    "outputs": [],
@@ -5257,7 +5257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 171,
    "id": "e91d1d6d",
    "metadata": {},
    "outputs": [
@@ -5625,7 +5625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 172,
    "id": "5847496e",
    "metadata": {},
    "outputs": [
@@ -5666,7 +5666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 173,
    "id": "cbcc7f10-c8ac-4938-aec3-888b0bff459e",
    "metadata": {},
    "outputs": [],
