--- a/models.ipynb
+++ b/models.ipynb
@@ -16,8 +16,17 @@
     "import pandas as pd\n",
     "import pmdarima as pm\n",
     "import numpy as np\n",
-    "\n",
+    "import warnings\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -5480,6 +5489,8 @@
     "for_period = len(test_price)\n",
     "\n",
     "for stock in train_price.columns:\n",
+    "    # m = 1 -> m = frequency (1 = daily)\n",
+    "    # auto p,d,q and auto differencing\n",
     "    model = pm.auto_arima(train_price[stock], m=1, seasonal=False, suppress_warnings=True)\n",
     "    \n",
     "    pred = model.predict(n_periods = for_period)\n",
