--- a/Data_PreProcessing.ipynb
+++ b/Data_PreProcessing.ipynb
@@ -5672,17 +5672,8 @@
    "outputs": [],
    "source": [
     "# Save data\n",
-    "tukey_estimates.dropna().to_pickle(\"data/tukey_estimates.pkl\")\n",
-    "huber_estimates.dropna().to_pickle(\"data/huber_estimates.pkl\")"
+    "tukey_estimates.dropna().to_pickle(\"data/tukey_estimates.pkl\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc102c11",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
