--- a/models.ipynb
+++ b/models.ipynb
@@ -17,15 +17,7 @@
     "import pmdarima as pm\n",
     "import numpy as np\n",
     "import warnings\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import matplotlib.pyplot as plt\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
